first pilot, modified settings.json

--- a/experiments/04_cat/settings.json
+++ b/experiments/04_cat/settings.json
@@ -16,6 +16,15 @@
    "IntegerValues": [
     95
    ]
+  },
+  {
+   "Name": "Worker_Locale",
+   "Comparator": "EqualTo",
+   "LocaleValues": [
+    {
+     "Country": "US"
+    }
+   ]
   }
  ]
 }
